distro update